# hrmony

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  config.toml  hrmony.swift  main  main.cpp
app/: CMakeLists.txt  Makefile  cmake_install.cmake
app/combination/: CMakeLists.txt
app/combination/include/: combination.hpp
app/combination/src/: combination.cpp
app/config/: CMakeLists.txt
app/config/include/: config.hpp
app/group/: CMakeLists.txt
app/group/include/: group.hpp  groupTypes.hpp
app/group/src/: group.cpp
app/group/types/: CMakeLists.txt
app/group/types/include/: action.hpp  groupTypes.hpp
app/group/types/src/: action.cpp  groupTypes.cpp
app/include/: app.hpp  appDefaults.hpp  appTypes.hpp
app/indexmap/: CMakeLists.txt
app/indexmap/include/: indexmap.hpp
app/keymap/include/: keymap.hpp
app/keys/: CMakeLists.txt
app/src/: app.cpp
common/: CMakeLists.txt  config.hpp  keys.hpp  types.hpp
common/combination/: CMakeLists.txt
common/indexmap/: CMakeLists.txt
common/types/: CMakeLists.txt
core/include/: event.hpp  key.hpp
include/: app.hpp  appDefaults.hpp  baseplatform.hpp  core.hpp  event.hpp  iplatform.hpp  key.hpp  keys.hpp  macPlatform.hpp  macos.hpp  macosConstants.hpp  macosDefaults.hpp  macosKeyCodeMap.hpp  macosKeyCodes.hpp  new.hpp  platform.hpp  types.hpp
logger/: CMakeLists.txt
macos/: CMakeLists.txt  Makefile  cmake_install.cmake
platform/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: MacPlatform.cpp  app.cpp  baseplatform.cpp  core.cpp  event.cpp  macos.cpp  platform.cpp
trie/src/: node.cpp  (+1 more)
(+51 files in other folders)
